--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "editor-devel",
+  "name": "qwilr-editor-devel",
   "description": "editor devel helper only",
   "version": "0.0.1",
   "main": "./client.js",
